executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-conf-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: egressgateway-daconf-router-executor-unver
  labels:
    app: egressgateway-router-executor-unver
  namespace: ${global.multiClusters.openshiftProjectName}
spec:
  ports:
    - name: http-2000
      protocol: TCP
      port: 2000
      targetPort: 2000
  selector:
    app: istio-egressgateway-router-executor-unver
