executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-daconf-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: egressgateway-daconf-router-executor-unver
spec:
  selector:
    istio: egressgateway-router-executor-unver
  servers:
    - hosts:
        - '${router-executor.ctr.istio.egress.se.http.daconf.host}'
      port:
        name: http-2000
        number: 2000
        protocol: HTTP
