executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-daconf-dsr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-daconf-router-executor-unver
spec:
  exportTo:
    - .
  host: '${router-executor.ctr.istio.egress.se.http.daconf.host}'
  trafficPolicy:
    portLevelSettings:
      - port:
          number: ${router-executor.ctr.istio.egress.se.http.daconf.port}
        tls:
          caCertificates: /vault/secrets/ca-chain.pem
          clientCertificate: /vault/secrets/client-cert.pem
          privateKey: /vault/secrets/client-cert.key
          mode: MUTUAL
          sni: ${router-executor.ctr.istio.egress.se.http.daconf.host}
  workloadSelector:
    matchLabels:
      app: istio-egressgateway-router-executor-unver
