executor-application/configs/src/main/resources/distr/k8s/base/istio/config/egress/daconf/egress-daconf-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: egressgateway-daconf-router-executor-unver
spec:
  exportTo:
    - .
  hosts:
    - '${router-executor.ctr.istio.egress.se.http.daconf.host}'
  gateways:
    - mesh
    - egressgateway-daconf-router-executor-unver
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: egressgateway-daconf-router-executor-unver
            port:
              number: 2000
    - match:
        - gateways:
            - egressgateway-daconf-router-executor-unver
          port: 2000
      route:
        - destination:
            host: ${router-executor.ctr.istio.egress.se.http.daconf.host}
            port:
              number: ${router-executor.ctr.istio.egress.se.http.daconf.port}
